--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button onclick="fetchData()">Fetch data</button>
     <script src="scripts.js"></script> 
 </body>
 </html>
