--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <button onclick="fetchData()">Fetch data</button>
-    <script src="scripts.js"></script> 
+    <select name="Your City">
+        <option>Warsaw</option>
+    </select>
+    <p id=testingObj></p>
+    <p id=testingObj2></p>
+    <script src="cities.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
