--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <button onclick="fetchData()">Fetch data</button>
-    <select name="Your City">
-        <option>Warsaw</option>
+    <select id= selector name="Your City">
     </select>
     <p id=testingObj></p>
     <p id=testingObj2></p>
