--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <button onclick="fetchData()">Fetch data</button>
-    <select id= selector name="Your City">
+    <select id= selectorOfCountry>
+        <option id=deletedOption>Select your country</option>
+    </select>
+    <select id= selectorOfCity>
     </select>
     <p id=testingObj></p>
     <p id=testingObj2></p>
