--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <select id= selectorOfCountry>
         <option id=deletedOption>Select your country</option>
     </select>
-    <select class=hidden id= selectorOfCity>
+    <select id= selectorOfCity>
     </select>
     <p id=testingObj></p>
     <p id=testingObj2></p>
