--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <p id=testingObj></p>
     <p id=testingObj2></p>
     <script src="cities.js"></script>
-    <script src="scripts.js"></script>
+    <script src="newlayout.js"></script>
 </body>
 </html>
