--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <button onclick="fetchData()">Fetch data</button>
-    <p id=countryFlag><select id= selectorOfCountry>
-        <option id=deletedOption>Select your country</option>
-    </select>
-    dupa
-    </p>
-    <p id = cityImage>
-        dupa
-    </p>
-    <select id= selectorOfCity class = flex-item>
-    </select>
-    <p id=testingObj></p>
-    <p id=testingObj2></p>
+    <div id=row>
+        <select id= selectorOfCountry>
+            <option id=deletedOption>Select your country</option>
+        </select>
+    <div id = countryFlag></div>
+    </div>
+
+    <div id=row>
+        <select id= selectorOfCity>
+        </select>
+        <div id = cityImage></div>
+    </div>
     <script src="cities.js"></script>
     <script src="newlayout.js"></script>
 </body>
